# telegrinder

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  contributing.md  mkdocs.yml  pyproject.toml  readme.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feat_request.md  new_feat.md  question.md
.github/actions/install-dependencies/: action.yml
.github/actions/setup/: action.yaml
.github/actions/setup-cached-uv/: action.yml
.github/workflows/: build.yml  ci.yml  lint-and-test.yml  lint_and_test.yml  publish.yml  pull-request.yml  pull_request.yml  push-build.yml  push.yml  push_build.yml  release.yml  typegen.yml  update_bot_api.yml
docs/: api.md  community_links.md  index.md
docs/guide/: code_separation.md  index.md  optional_dependencies.md
docs/sheets/: checkbox.md  code_separation.md  formatting.md  keyboard_set.md
docs/tools/: checkbox.md  error_handler.md  formatting.md  global_context.md  index.md  keyboard_set.md  loop_wrapper.md  option.md  result.md  templating.md
docs/tutorial/en/: 0_tutorial.md  1_setting_up.md  2_rules.md  3_functional_bits.md  4_api.md  5_nodes.md  6_dispatch.md  7_keyboard.md
docs/tutorial/ru/: 0_tutorial.md  1_setting_up.md  2_rules.md  3_functional_bits.md  4_api.md  5_nodes.md  6_dispatch.md  7_keyboard.md
examples/: action.py  aesthetics.py  assistant.py  callback_data_map.py  callback_query.py  chaotic.py  chat_join_request.py  checkbox.py  choice.py  command.py  command_dispatch.py  composition.py  custom_api.py  custom_rule.py  download_photo.py  easy.py  error_catching.py  error_handler.py  event_node.py  formatting.py  forward_message.py  global_context.py  global_ctx.py  i18n.py  i18n_simple.py  inline_bot.py  inline_keyboard.py  invoice.py  jinja_templating.py  kaktovik.py  kb_set.py  keyboard.py  long_states.py  loop_wrapper.py  magic_rule.py  media_group.py  message_entities.py  middleware.py  nodes.py  pagination.py  (+20 more)
examples/assets/: kaktovik.txt  kb_set_config.yaml
examples/assets/templates/: start_template.j2
examples/blueprint_bot/: __main__.py  admin.py  client.py  start.py  with_enum.py
examples/blueprint_bot/handlers/: admin.py  start.py  with_enum.py
examples/webhook_bot/: app.py  bot.py
telegrinder/: __init__.py  __meta__.py  env.py  model.py  model.pyi  modules.py  msgspec_json.py  msgspec_utils.py  result.py  rules.py  schema_generator.py  verification_utils.py
telegrinder/api/: __init__.py  abc.py  api.py  error.py  response.py  token.py  validators.py
telegrinder/bot/: __init__.py  bot.py  rules.py
telegrinder/bot/adapter/: __init__.py  abc.py  dataclass.py  errors.py  event.py  node.py  raw_event.py  raw_update.py
telegrinder/bot/cute_types/: __init__.py  base.py  base.pyi  business_connection.py  business_messages_deleted.py  callback_query.py  chat_boost_removed.py  chat_boost_updated.py  chat_join_request.py  chat_member_updated.py  chosen_inline_result.py  cute.py  inline_query.py  managed_bot_updated.py  message.py  message_reaction_count_updated.py  message_reaction_updated.py  paid_media_purchased.py  poll.py  poll_answer.py  pre_checkout_query.py  shipping_query.py  update.py  utils.py
telegrinder/bot/dispatch/: __init__.py  abc.py  action.py  command.py  composition.py  context.py  dispatch.py  process.py  waiter.py
telegrinder/bot/polling/: __init__.py  abc.py  error_handler.py  polling.py  utils.py
telegrinder/bot/rules/: __init__.py  abc.py  button.py  callback_data.py  chat_join.py  chat_member_updated.py  command.py  enum_text.py  func.py  fuzzy.py  id.py  inline.py  integer.py  is_from.py  logic.py  magic.py  markup.py  media.py  mention.py  message.py  message_entities.py  node.py  payload.py  payment_invoice.py  regex.py  rule_enum.py  start.py  (+4 more)
telegrinder/client/: __init__.py  abc.py  aiohttp.py  form_data.py  rnet.py  sonic.py  wreq.py  wreq_client.py
telegrinder/http/: aiohttp.py
telegrinder/http_/: __init__.py  abc.py  aiohttp.py
telegrinder/msgspec_utils/: __init__.py  abc.py  decoder.py  encoder.py  json.py  tools.py
telegrinder/node/: __init__.py  attachment.py  base.py  callback_query.py  collection.py  command.py  compose.py  composer.py  container.py  context.py  either.py  error.py  event.py  exceptions.py  file.py  i18n.py  me.py  message.py  message_entities.py  payload.py  polymorphic.py  pre_checkout_query.py  reply_message.py  rule.py  scope.py  session.py  source.py  state_mutator.py  text.py  update.py  utility.py  utils.py
telegrinder/option/: __init__.py  msgspec_option.py  option.py
telegrinder/scenario/: __init__.py  abc.py  checkbox.py  choice.py
telegrinder/tools/: __init__.py  aio.py  awaitable.py  buttons.py  decode.py  encode.py  final.py  fullname.py  functional.py  inline_query.py  input_file_directory.py  input_file_manager.py  json.py  keyboard.py  lifespan.py  limited_dict.py  loop_wrapper.py  magic.py  member_descriptor_proxy.py  parse_mode.py  repr.py  rule_dependencies.py  strings.py
telegrinder/typegen/: __main__.py  schema_generator.py
telegrinder/types/: __init__.py  constructors.py  date_time_format.py  default_params.py  enums.py  input_file.py  methods.py  methods_utils.py  objects.py  objects_utils.py  webapp.py
tests/: conftest.py  test_adapters.py  test_api.py  test_bot.py  test_cute_lazy_result.py  test_http.py  test_lazy_result.py  test_nodes.py  test_rules.py  test_utils.py  test_views.py
tests/fixtures/: __init__.py  api_instance.py  callback_query_update.py  context.py  message_update.py  node_scope.py
tests/tools/: test_global_context.py
typegen/: __init__.py  __main__.py  api_types_version.json  combine_shortcuts.py  config.py  config.toml  config_default_api_params.json  config_generation_id_by_default.json  config_literal_types.json  enum_ref_config.json  generator.py  literal_types_config.json  merge_shortcuts.py  models.py  nicification.py  nicifications.py  requirements.txt  schema_generator.py
typegen/models/: __init__.py  config.py  schema.py
utility/typegen/: schema_generator.py
(+205 files in other folders)
