[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegrinder"
description = "Modern visionary telegram bot framework."
authors = [{ name = "timoniq", email = "tesseradecades@mail.ru" }]
requires-python = ">=3.12,<4.0"
readme = "readme.md"
license = { file = "LICENSE" }
maintainers = [{ name = "luwqz1", email = "howluwqz1@gmail.com" }]
dynamic = ["version"]
keywords = [
    "asyncio",
    "api schema",
    "async",
    "bot building",
    "bot api",
    "custom rules",
    "telegram",
    "telegram bot api framework",
    "telegrinder framework",
    "middleware",
    "nodes",
    "framework",
    "telegrinder",
    "waiter machine",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "aiodns (>=3.5.0,<4.0.0)",
    "vbml (>=1.1.post1,<2.0)",
    "choicelib (>=0.1.5,<0.2.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "msgspec (>=0.19.0,<0.20.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "fntypes",
]

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.21.0; (sys_platform == 'darwin' or sys_platform == 'linux')",
    "winloop>=0.1.8; (sys_platform == 'cli' or sys_platform == 'cygwin' or sys_platform == 'win32')",
]
structlog = ["structlog>=25.4.0"]
loguru = ["loguru>=0.7.0"]
brotli = ["brotli>=1.1.0"]
socks = ["aiohttp-socks>=0.10.1"]

[project.urls]
Source = "https://github.com/timoniq/telegrinder"
"Bug Tracker" = "https://github.com/timoniq/telegrinder/issues"
Documentation = "https://github.com/timoniq/telegrinder/blob/dev/docs/index.md"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0,<5.0",
    "ruff>=0.11.13,<0.12",
    "basedpyright>=1.29.4,<2",
    "requests>=2.32.4,<3",
    "tomlkit>=0.13.3,<1",
    "sort-all>=1.3.0,<2",
    "libcst>=1.8.2,<2",
    "pytest>=8.4.0,<9",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.1,<4",
]

[tool.uv]
package = true

[tool.uv.sources]
fntypes = { git = "https://github.com/timoniq/fntypes.git", rev = "main" }

[tool.hatch.version]
path = "telegrinder/__meta__.py"

[tool.ruff]
line-length = 115
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM"
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
exclude = [".venv", ".idea", "docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"typegen/**.py" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "docs",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
