[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegrinder"
description = "Modern visionary telegram bot framework."
authors = [{ name = "timoniq", email = "tesseradecades@mail.ru" }]
requires-python = ">=3.14,<4.0"
readme = "readme.md"
license = { file = "LICENSE" }
maintainers = [{ name = "luwqz1", email = "howluwqz1@gmail.com" }]
dynamic = ["version"]
keywords = [
    "asyncio",
    "api schema",
    "async",
    "bot building",
    "bot api",
    "custom rules",
    "telegram",
    "telegram bot api framework",
    "telegrinder framework",
    "middleware",
    "nodes",
    "framework",
    "telegrinder",
    "waiter machine",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "rnet (>=3.0.0rc20)",
    "msgspec (>=0.20.0,<0.21.0)",
    "certifi (>=2026.1.4)",
    "choicelib (>=0.1.5,<0.2.0)",
    "betterconf",
    "nodnod",
    "vbml2",
    "kungfu",
]

[project.optional-dependencies]
brotli = ["brotli"]
loguru = ["loguru"]
structlog = ["structlog"]
colorama = ["colorama; (sys_platform == 'win32')"]
winloop = ["winloop; (sys_platform == 'cli' or sys_platform == 'cygwin' or sys_platform == 'win32')"]
uvloop = ["uvloop; (sys_platform == 'darwin' or sys_platform == 'linux')"]

[project.urls]
Source = "https://github.com/timoniq/telegrinder"
"Bug Tracker" = "https://github.com/timoniq/telegrinder/issues"
Documentation = "https://github.com/timoniq/telegrinder/blob/dev/docs/index.md"

[dependency-groups]
dev = [
    "ruff>=0.14.13,<1",
    "basedpyright>=1.37.1,<2",
    "requests>=2.32.5,<3",
    "tomlkit>=0.13.3,<1",
    "libcst>=1.8.6,<2",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.1,<4",
    "pre-commit>=4.5.1,<5",
]

[tool.uv]
package = true

[tool.uv.sources]
betterconf = { git = "https://github.com/prostomarkeloff/betterconf", rev = "master" }
nodnod = { git = "https://github.com/luwqz1/nodnod", rev = "fix" }
kungfu = { git = "https://github.com/timoniq/kungfu", rev = "main" }
vbml2 = { git = "https://github.com/tesseradecade/vbml", rev = "master" }

[tool.hatch.version]
path = "telegrinder/__meta__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "I",
  "D",
  "N",
  "PLR",
  "Q",
  "COM",
  "TC",
  "YTT",
  "SIM",
  "RUF022",
]
ignore = [
  "COM812",
  "N805",
  "N818",
  "TC001",
  "TC002",
  "TC003",
  "TC004",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D202",
  "D203",
  "D205",
  "D209",
  "D211",
  "D213",
  "D400",
  "D401",
  "D404",
  "D415",
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913"
]
fixable = ["ALL"]
unfixable = ["ERA"]
exclude = [".venv", ".idea", "docs"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"typegen/**.py" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]

[tool.pyright]
exclude = [
  ".venv",
  ".idea",
  ".ruff_cache",
  ".pytest_cache",
  "typegen",
  "docs",
  "local",
]
typeCheckingMode = "basic"
pythonPlatform = "All"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = false
